# prototypes

./: .gitignore
Common/arduino_modules/: include_directories.cmake
Common/arduino_modules/RestCommandHandler/: Command.cpp  Command.h  CommandHandler.cpp  (+7 more)
DexTools/: .gitignore  dex  make.sh
SmartHome/: python_modules  smarthome.db  web_thirdpart
SmartHome/arduino/: CMakeLists.txt  DisplayController.h  IconController.cpp  IconController.h  MessageController.cpp  PinController.cpp  PinController.h  SmartHome.cpp  SmartHome.h
SmartHome/python/: ArduinoController.py  ControlManager.py  EventManager.py  SensorManager.py  ShellControlProvider.py  ShellEventHandler.py  ShellEventHandlerProvider.py  ShellSensorProvider.py  ShellSliderProvider.py  ShellSwitchProvider.py  SliderManager.py  SmartHome.py  SwitchController.py  SwitchManager.py  VideoController.py  config.conf  config.conf.debug  config.conf.prod  cpu_load.sh  smarthome.db  tinycamd
SmartHome/web/: index.html  jquery  jquery-mobile  package-lock.json  package.json
Srt2Speech/python/: Srt2Speech.py  config.conf
Tank/: arduino_modules  arduino_thirdpart  tinycamd
Tank/arduino/: BatteryController.cpp  BatteryController.h  CMakeLists.txt  DisplayController.cpp  GunController.cpp  GunController.h  MessageController.cpp  MessageController.h  Tank.cpp  Tank.h  arduino_modules
Tank/tinycamd/: device.c  httpd.h  tinycamd.h
ThirdPart/php/: log4php
ThirdPart/web/: babel-standalone  bootstrap-dropdown-checkbox  bootstrap-select  bootstrap-slider  jplayer  jquery  jquery-mobile  jquery.mobile  react
(+115 files in other folders)
